graph_asset_inventory_api: implement /parents endpoints
