# graph_asset_inventory_api/api/__init__.py
@@ -110,3 +110,72 @@ class AssetResp:
     def from_dbasset(cls, dbasset):
         """Creates an ``AssetResp`` from a ``DbAsset``."""
         return cls(dbasset.vid, dbasset.asset_id, dbasset.time_attr)
+
+
+# Parents.
+
+
+class ParentOfReq:
+    """Represents a ``parent_of`` relationship from the point of view of an API
+    request."""
+
+    def __init__(self, timestamp, expiration):
+        self.timestamp = timestamp.isoformat()
+        self.expiration = expiration.isoformat()
+
+    def __repr__(self):
+        return f'{{timestamp: {self.timestamp}, ' \
+               f'expiration: {self.expiration}}}'
+
+    def __str__(self):
+        return f'({self.timestamp}, {self.expiration})'
+
+    def __eq__(self, o):
+        if not isinstance(self, o.__class__):
+            return False
+        return self.timestamp == o.timestamp and \
+            self.expiration == o.expiration
+
+
+class ParentOfResp:
+    """Represents a ``parent_of`` relationship from the point of view of an API
+    response."""
+
+    def __init__(self, id_, parent_id, child_id, time_attr):
+        self.id = id_
+        self.parent_id = parent_id
+        self.child_id = child_id
+        self.first_seen = time_attr.first_seen.isoformat()
+        self.last_seen = time_attr.last_seen.isoformat()
+        self.expiration = time_attr.expiration.isoformat()
+
+    def __repr__(self):
+        return f'{{id: {self.id}, ' \
+               f'parent_id: {self.parent_id}, ' \
+               f'child_id: {self.child_id}, ' \
+               f'first_seen: {self.first_seen}, ' \
+               f'last_seen: {self.last_seen}, ' \
+               f'expiration: {self.expiration}}}'
+
+    def __str__(self):
+        return f'{self.parent_id}-parent_of->{self.child_id}@{self.id}'
+
+    def __eq__(self, o):
+        if not isinstance(self, o.__class__):
+            return False
+        return self.id == o.id and \
+            self.parent_id == o.parent_id and \
+            self.child_id == o.child_id and \
+            self.first_seen == o.first_seen and \
+            self.last_seen == o.last_seen and \
+            self.expiration == o.expiration
+
+    @classmethod
+    def from_dbparentof(cls, dbparentof):
+        """Creates a ``ParentOfResp`` from a ``DbParentOf``."""
+        return cls(
+            dbparentof.eid,
+            dbparentof.parent_vid,
+            dbparentof.child_vid,
+            dbparentof.time_attr,
+        )
