# graph_asset_inventory_api/openapi/graph-asset-inventory-api.yaml
@@ -245,9 +245,11 @@ paths:
         required: true
 
     get:
+      operationId: graph_asset_inventory_api.api.parents.get_assets_id_parents
       summary: Returns the list of child-of relationships of an asset.
       tags:
         - Assets
+        - Parents
         - v1
       parameters:
         - in: query
@@ -274,26 +276,6 @@ paths:
         '404':
           description: The asset was not found.
 
-    put:
-      summary: Adds a parent to an asset or updates an existing relationship.
-      tags:
-        - Assets
-        - v1
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/ParentOfReq'
-      responses:
-        '201':
-          description: A JSON object with the created or updated relationship.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ParentOfResp'
-        '404':
-          description: At least one of the assets do not exist.
-
   /v1/assets/{child_id}/parents/{parent_id}:
     parameters:
       - in: path
@@ -309,10 +291,40 @@ paths:
           type: integer
         required: true
 
+    put:
+      operationId: graph_asset_inventory_api.api.parents.put_assets_child_id_parents_parent_id
+      summary: Adds a parent to an asset or updates an existing relationship.
+      tags:
+        - Assets
+        - Parents
+        - v1
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ParentOfReq'
+      responses:
+        '200':
+          description: A JSON object with the updated relationship.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ParentOfResp'
+        '201':
+          description: A JSON object with the created relationship.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ParentOfResp'
+        '404':
+          description: At least one of the assets do not exist.
+
     delete:
+      operationId: graph_asset_inventory_api.api.parents.delete_assets_child_id_parents_parent_id
       summary: Deletes a child-of relationship.
       tags:
         - Assets
+        - Parents
         - v1
       responses:
         '204':
@@ -334,6 +346,7 @@ paths:
       tags:
         - Assets
         - Teams
+        - Owners
         - v1
       parameters:
         - in: query
@@ -358,11 +371,27 @@ paths:
                 items:
                   $ref: '#/components/schemas/OwnsResp'
 
+  /v1/assets/{asset_id}/owners/{team_id}:
+    parameters:
+      - in: path
+        name: asset_id
+        description: ID of the asset.
+        schema:
+          type: integer
+        required: true
+      - in: path
+        name: team_id
+        description: ID of the team.
+        schema:
+          type: integer
+        required: true
+
     put:
       summary: Adds an owner to an asset or updates and existing relationship.
       tags:
         - Assets
         - Teams
+        - Owners
         - v1
       requestBody:
         content:
@@ -379,26 +408,12 @@ paths:
         '404':
           description: The asset or the team do not exist.
 
-  /v1/assets/{asset_id}/owners/{team_id}:
-    parameters:
-      - in: path
-        name: asset_id
-        description: ID of the asset.
-        schema:
-          type: integer
-        required: true
-      - in: path
-        name: team_id
-        description: ID of the team.
-        schema:
-          type: integer
-        required: true
-
     delete:
       summary: Deletes an owned-by relationship.
       tags:
         - Assets
         - Teams
+        - Owners
         - v1
       responses:
         '204':
@@ -412,6 +427,8 @@ paths:
       tags:
         - Assets
         - Teams
+        - Parents
+        - Owners
         - v1
       requestBody:
         content:
@@ -522,9 +539,6 @@ components:
     ParentOfReq:
       type: object
       properties:
-        parent_id:
-          type: integer
-          description: ID of the parent.
         timestamp:
           type: string
           format: date-time
@@ -532,7 +546,6 @@ components:
           type: string
           format: date-time
       required:
-        - parent_id
         - expiration
 
     ParentOfResp:
@@ -543,7 +556,8 @@ components:
           description: ID of the parent_of relationship.
         parent_id:
           type: integer
-          description: ID of the parent.
+        child_id:
+          type: integer
         first_seen:
           type: string
           format: date-time
@@ -556,6 +570,7 @@ components:
       required:
         - id
         - parent_id
+        - child_id
         - first_seen
         - last_seen
         - expiration
@@ -563,9 +578,6 @@ components:
     OwnsReq:
       type: object
       properties:
-        id:
-          type: integer
-          description: ID of the team.
         start_time:
           type: string
           format: date-time
@@ -573,7 +585,6 @@ components:
           type: string
           format: date-time
       required:
-        - id
         - start_time
 
     OwnsResp:
@@ -581,7 +592,11 @@ components:
       properties:
         id:
           type: integer
-          description: ID of the team.
+          description: ID of the owns relationship.
+        team_id:
+          type: integer
+        asset_id:
+          type: integer
         start_time:
           type: string
           format: date-time
@@ -590,4 +605,6 @@ components:
           format: date-time
       required:
         - id
+        - team_id
+        - asset_id
         - start_time
